correction contrast

--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper-min.png");
+/*    background: url("img/texture-paper-min.png");*/
     background-size: 280px 280px;
 }
 
@@ -825,7 +825,7 @@ h4 {
 }
 
 .bg-presentation {
-    background-image: url("img/image-de-presentation.bmp");
+    background-image: url("img/image-de-presentation-min.png");
 }
 
 @media (max-width: 1024px) {
